--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,12 @@ services:
 
   db:
     container_name: agryo-db
-    image: postgres
+    image: postgis/postgis
     restart: unless-stopped
     environment:
       POSTGRES_DB: $DB_NAME
       POSTGRES_PASSWORD: $DB_PASSWORD
-        # volumes:
-        #   - ./postgres:/var/lib/postgresql/data
-        #   - ./cotacao.sql:/docker-entrypoint-initdb.d/cotacao.sql
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
     ports:
       - 5432:5432
